# 429.rs

./: .gitignore  DEPLOYMENT.md  README.md  TASKS.md  docker-compose.yml
fake-api/: main.py
helm/429-rs/: Chart.yaml  values-local.yaml  values.yaml
helm/429-rs/templates/: _helpers.tpl  bff.yaml  ingress.yaml  mongo.yaml  rate-limiter.yaml  redis.yaml  ui.yaml
helm/429rs/: Chart.yaml  values.yaml
helm/429rs/templates/: _helpers.tpl  bff.yaml  fake-api.yaml  rate-limiter.yaml  redis.yaml  ui.yaml
services/bff/: main.py  requirements.txt
services/bff/app/: db.py  redis.py  redis_client.py  schemas.py  settings.py
services/bff/app/routers/: config.py  metrics.py
services/bff/tests/: conftest.py  test_config_api.py  test_metrics_api.py
services/rate-limiter/: Cargo.toml  Dockerfile
services/rate-limiter/src/: main.rs
services/ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
services/ui/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
services/ui/src/components/: MetricsDashboard.tsx  RuleForm.tsx  RulesTable.tsx  ServiceForm.tsx  ServicesView.tsx
